Incorporating TUV patches r1851/1853/1854/1855/1857
git-svn-id: https://svn.libreccm.org/ccm/trunk@97 8810af33-2d31-482b-a856-94f89814c4df